manifests/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  labels:
    app: traefik
spec:
  basicAuth:
    secret: traefik-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  labels:
    app: traefik
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
  labels:
    app: traefik
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "POST"
      - "PUT"
      - "PATCH"
      - "DELETE"
    accessControlAllowOriginList:
      - "https://devpie.io"
    accessControlAllowHeaders:
      - "Accept"
      - "BasePath"
      - "Authorization"
      - "Cache-Control"
      - "Content-Type"
      - "Strict-Transport-Security"
    accessControlMaxAge: 100
    addVaryHeader: true
