manifests/agg-identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agg-identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agg-identity
  template:
    metadata:
      labels:
        app: agg-identity
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/agg-identity:377489c
          name: agg-identity
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
