manifests/mic-identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-identity-depl
spec:
  selector:
    matchLabels:
      app: mic-identity
  template:
    metadata:
      labels:
        app: mic-identity
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/mic-identity:5591bd0
          name: mic-identity
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
