manifests/app-identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-identity
  template:
    metadata:
      labels:
        app: app-identity
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/app-identity:3536d1a
          name: app-identity
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app-identity-svc
spec:
  selector:
    app: app-identity
  ports:
    - port: 4000
      targetPort: 4000
