manifests/client-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-frontend
spec:
  selector:
    matchLabels:
      app: client-frontend
  template:
    metadata:
      labels:
        app: client-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/client:daa3c8d
          name: client-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: client-frontend-svc
spec:
  selector:
    app: client-frontend
  ports:
    - port: 80
      targetPort: 80
