manifests/mic-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-admin
spec:
  selector:
    matchLabels:
      app: mic-admin
  template:
    metadata:
      labels:
        app: mic-admin
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/admin:40cabcd
          name: mic-admin
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: mic-admin-svc
spec:
  selector:
    app: mic-admin
  ports:
    - port: 4000
      targetPort: 4000
