manifests/mic-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-project
spec:
  selector:
    matchLabels:
      app: mic-project
  template:
    metadata:
      labels:
        app: mic-project
        pod: requires-rds
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/project:5895cd4
          name: mic-project
          ports:
            - containerPort: 4004
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mic-project-svc
spec:
  selector:
    app: mic-project
  ports:
    - port: 4004
      targetPort: 4004
