manifests/mic-registration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-registration
spec:
  selector:
    matchLabels:
      app: mic-registration
  template:
    metadata:
      labels:
        app: mic-registration
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/registration:3cafea5
          name: mic-registration
          ports:
            - containerPort: 4001
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mic-registration-svc
spec:
  selector:
    app: mic-registration
  ports:
    - port: 4001
      targetPort: 4001
