manifests/mic-subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-subscription
spec:
  selector:
    matchLabels:
      app: mic-subscription
  template:
    metadata:
      labels:
        app: mic-subscription
        pod: requires-rds
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: subscription:c0fb992
          name: mic-subscription
          ports:
            - containerPort: 4006
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mic-subscription-svc
spec:
  selector:
    app: mic-subscription
  ports:
    - port: 4006
      targetPort: 4006
