manifests/mic-tenant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-tenant
spec:
  selector:
    matchLabels:
      app: mic-tenant
  template:
    metadata:
      labels:
        app: mic-tenant
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/tenant:5895cd4
          name: mic-tenant
          ports:
            - containerPort: 4002
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mic-tenant-svc
spec:
  selector:
    app: mic-tenant
  ports:
    - port: 4002
      targetPort: 4002
