manifests/mic-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-user
spec:
  selector:
    matchLabels:
      app: mic-user
  template:
    metadata:
      labels:
        app: mic-user
        pod: requires-rds
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - image: ghcr.io/devpies/user:8e83977
          name: mic-user
          ports:
            - containerPort: 4005
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mic-user-svc
spec:
  selector:
    app: mic-user
  ports:
    - port: 4005
      targetPort: 4005
