manifests/mic-users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mic-users-depl
spec:
  selector:
    matchLabels:
      app: mic-users
  template:
    metadata:
      labels:
        app: mic-users
    spec:
      containers:
        - image: ghcr.io/devpies/mic-users:74e3abc
          name: mic-users
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "250m"
              memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mic-users-svc
spec:
  selector:
    app: mic-users
  ports:
    - port: 4000
      targetPort: 4000
