manifests/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: dashboard
      port: 9000
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: traefik
