manifests/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: approute
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`devpie.io`)
    kind: Rule
    services:
      - name: service-2048
        port: 80
