manifests/traefik-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: admin
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin-dev.devpie.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: mic-admin-svc
          port: 4000
    - match: Host(`admin-dev.devpie.io`) && PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api-dev.devpie.io`) && PathPrefix(`/api/registration`)
      kind: Rule
      services:
      - name: mic-registration-svc
        port: 4001
      middlewares:
        - name: headers
        - name: stripprefix
    - match: Host(`api-dev.devpie.io`) && PathPrefix(`/api/users`)
      kind: Rule
      services:
        - name: mic-user-svc
          port: 4005
      middlewares:
        - name: headers
        - name: stripprefix
    - match: Host(`api-dev.devpie.io`) && PathPrefix(`/api/projects`)
      kind: Rule
      services:
        - name: mic-project-svc
          port: 4004
      middlewares:
        - name: headers
        - name: stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-healthcheck
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Path(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-dev.devpie.io`) && PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
